tests/NormalTests/paczka1/small_fuzzy/36538071.err
Error in line 13: yb4DIt8 S369 23,53
Error in line 3: yb4DIt8 S369 23,5
